--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,13 +32,16 @@ jobs:
           scons -Q
           dir /b *.nvda-addon
 
-    - name: Create GitHub Release and upload asset
-        uses: softprops/action-gh-release@v2
-        with:
-      tag_name: ${{ github.ref_name }}
-      generate_release_notes: true
-      make_latest: true
-          files: |
-            *.nvda-addon
+      - name: Ensure GitHub Release exists
+        shell: cmd
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release view "%GITHUB_REF_NAME%" 1>nul 2>nul || gh release create "%GITHUB_REF_NAME%" -t "%GITHUB_REF_NAME%" -n "Automated release"
+
+      - name: Upload asset (overwrite if exists)
+        shell: cmd
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload "%GITHUB_REF_NAME%" *.nvda-addon --clobber
